--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.0.0",
     "@radix-ui/react-slot": "^1.0.0",
     "axios": "^1.0.0",
+    "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "sass": "^1.54.0"
@@ -31,6 +33,7 @@
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.12",
     "babel-loader": "^8.2.5",
+    "clsx": "^1.2.1",
     "postcss": "^8.4.17",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.3",
