--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
       - name: Checkout
-        use: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -18,7 +18,7 @@ jobs:
           node-version: 16
 
       - name: Install Dependencies
-      - run: npm ci
+      - run: npm ci --force
 
       - name: Build Storybook
       - run: npm run build-storybook
