--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        run: actions/checkout@v3
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        run: actions/setup-node@v3
         with:
           node-version: 16
 
