--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -2,8 +2,8 @@ name: Deploy Storybook
 
 on:
   push:
-    branches: 
-    - main
+    branches:
+      - main
 
 jobs:
   build-and-deploy:
@@ -11,20 +11,20 @@ jobs:
 
     steps:
       - name: Checkout
-        run: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Setup Node.js
-        run: actions/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: 16
 
-      - name: Install Dependencies
-      - run: npm ci --legacy-peer-deps
+      - name: Install dependencies
+        run: npm ci --legacy-peer-deps
 
       - name: Build Storybook
-      - run: npm run build-storybook
+        run: npm run build-storybook
 
       - name: Deploy Storybook
         run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
         env:
-          GH_TOKEN: ${{githu.actor}}:${{secrets.GITHUB_TOKEN}}
+          GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
