--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "deploy-storybook": "storybook-to-ghpages"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.0.0",
     "@radix-ui/react-slot": "^1.0.0",
+    "@storybook/addon-a11y": "^6.5.12",
     "axios": "^1.0.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
