--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@storybook/addon-interactions": "^6.5.12",
     "@storybook/addon-links": "^6.5.12",
     "@storybook/builder-vite": "^0.2.4",
+    "@storybook/jest": "^0.0.10",
     "@storybook/react": "^6.5.12",
     "@storybook/storybook-deployer": "^2.8.12",
+    "@storybook/test-runner": "^0.9.0",
     "@storybook/testing-library": "^0.0.13",
     "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.0",
@@ -37,6 +39,8 @@
     "autoprefixer": "^10.4.12",
     "babel-loader": "^8.2.5",
     "clsx": "^1.2.1",
+    "msw": "^0.47.4",
+    "msw-storybook-addon": "^1.6.3",
     "postcss": "^8.4.17",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.3",
