--- a/package.json
+++ b/package.json
@@ -18,23 +18,25 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "sass": "^1.54.0"
+    "sass": "^1.54.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@storybook/addon-actions": "^6.5.12",
-    "@storybook/addon-essentials": "^6.5.12",
+    "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.5.12",
     "@storybook/addon-links": "^6.5.12",
-    "@storybook/builder-vite": "^0.2.4",
+    "@storybook/builder-vite": "^0.1.37",
     "@storybook/jest": "^0.0.10",
-    "@storybook/react": "^6.5.12",
+    "@storybook/react": "^6.1.21",
     "@storybook/storybook-deployer": "^2.8.12",
-    "@storybook/test-runner": "^0.9.0",
+    "@storybook/test-runner": "^0.0.8",
     "@storybook/testing-library": "^0.0.13",
     "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.12",
     "babel-loader": "^8.2.5",
